Dark Mode 10.0 - Title alignment of Dark Mode element Fixed

--- a/book-bazaar/src/Components/Sidebar.css
+++ b/book-bazaar/src/Components/Sidebar.css
@@ -68,7 +68,7 @@
 }
 
 .post-button:hover {
-  background-color: #0056b3;
+  background-color: var(--foreground_blue_color);
 }
 
 .form-row {
@@ -78,12 +78,16 @@
 .form-row input {
   flex: 1;
   margin-right: 10px;
+  color: var(--foregroung_main_color);
+  background: var(--background_color);
 }
 
 .long-input,
 select {
   flex: 1;
   margin-bottom: 10px;
+  color: var(--foregroung_main_color);
+  background: var(--background_color);
 }
 
 .long-input {
@@ -96,3 +100,5 @@ select {
   width: 100%;
   padding: 8px;
 }
+
+
